--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           node-version: "18"
       - name: Install_Dependencies
-        run: npm i
+        run: npm ci
       - name: Run_Tests
         run: npm run test
